The 2am offset was a bad choice as this hour doesn't necessarily exist on a DST switch.  So use 4am instead.  Fixes bug #27719